--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,6 +10,7 @@ dependencies:
   flutter:
     sdk: flutter
   # cupertino_icons: ^0.1.2
+  flutter_slidable: ^0.6.0
   provider: ^5.0.0
   shared_preferences: ^2.0.6
 
