--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,9 +10,15 @@ dependencies:
   flutter:
     sdk: flutter
   # cupertino_icons: ^0.1.2
+  flutter_launcher_icons: ^0.9.0
   flutter_slidable: ^0.6.0
   provider: ^5.0.0
   shared_preferences: ^2.0.6
+
+flutter_icons:
+  android: "launcher_icon"
+  ios: true
+  image_path: "assets/icon/icon.png"
 
 dev_dependencies:
   flutter_test:
